--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="incorrect_data">Something is incorrect</string>
     <string name="something_went_wrong">Something went wrong. Please try again.</string>
     <string name="edu_tasker_professor">EduTasker - Professor Panel</string>
+    <string name="edu_tasker_student">EduTasker - Student Panel</string>
     <string name="to_do">To Do</string>
     <string name="in_progress">In progress</string>
     <string name="done">Done</string>
