--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,9 @@
     <string name="assigned_by">Assigned by</string>
     <string name="status">Status:</string>
     <string name="tap_to_remove">(tap to remove)</string>
+    <string name="no_notifications">No notifications available</string>
+    <string name="mark_as_read">Mark as read</string>
+    <string name="unread_notification">Unread notification</string>
+    <string name="new_task_assigned">New task assigned</string>
+    <string name="task_status_updated">Task status updated</string>
 </resources>
